provided spring security, thymeleaf and primitive user registration and authorization support
Signed-off-by: Alexandr Davydov <davidoff_92@inbox.ru>

--- a/src/main/webapp/WEB-INF/templates/admin.html
+++ b/src/main/webapp/WEB-INF/templates/admin.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
+<html lang="en">
 <meta charset="UTF-8">
 <head>
     <title>Hotel System</title>
@@ -17,11 +15,10 @@
     <div class="d-flex justify-content-center h-100">
         <div class="card">
             <div class="card-header">
-                <h3 class="text-center">Welcome to hotel!</h3>
+                <h3 class="text-center">Welcome</h3>
+                <p class="text-center white">To admin page!</p>
             </div>
-            <p>HELLO</p>
             <div class="card-body">
-
             </div>
             <div class="card-footer">
             </div>
