--- a/src/main/webapp/WEB-INF/templates/register.html
+++ b/src/main/webapp/WEB-INF/templates/register.html
@@ -52,12 +52,12 @@
                                type="password">
                     </div>
 
-                    <div class="form-group input-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
-                        </div>
-                        <input class="form-control" placeholder="Repeat password" type="password">
-                    </div>
+                    <!-- <div class="form-group input-group">
+                         <div class="input-group-prepend">
+                             <span class="input-group-text"> <i class="fa fa-lock"></i> </span>
+                         </div>
+                         <input class="form-control" placeholder="Repeat password" type="password">
+                     </div>-->
 
                     <div class="form-group">
                         <button type="submit" class="btn btn-primary btn-block"> Create account</button>
