--- a/src/main/webapp/WEB-INF/templates/login.html
+++ b/src/main/webapp/WEB-INF/templates/login.html
@@ -32,9 +32,9 @@
                         </div>
                         <input name="password" type="password" class="form-control" placeholder="password">
                     </div>
-                    <div class="row align-items-center remember">
+                    <!--<div class="row align-items-center remember">
                         <input type="checkbox">Remember Me
-                    </div>
+                    </div>-->
                     <div class="form-group">
                         <input type="submit" value="Login" class="btn float-right login_btn">
                     </div>
