--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -19,27 +19,26 @@
     <div class="d-flex justify-content-center h-100">
         <div class="card">
             <div class="card-header">
-
-                <h3 class="text-center">Welcome to hotel system, <span th:text="${userLogin}"></span>!</h3>
-                <div sec:authorize="hasRole('ROLE_USER') || hasRole('ADMIN')">
-                    <p class="text-center white">This content is shown to all users.</p>
-                </div>
-                <div sec:authorize="hasRole('ROLE_ADMIN')">
-                    <p class="text-center white">This content is only shown to admins.</p>
-                </div>
+                <h3 class="text-center">Welcome to hotel system, <span th:text="${user.firstName}"></span>!</h3>
+            </div>
+            <div class="card-body">
+                <a th:href="@{/request/new}" class="btn btn-success float-left">New request</a>
+            </div>
+            <div class="card-footer">
+                <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/admin}" class="btn btn-info float-left">Admin
+                    menu</a>
                 <form name="logoutForm" th:action="@{/logout}" method="post">
                     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                     <input type="submit" class="btn btn-warning float-right" value="Sign Out"/>
                 </form>
-            </div>
-            <div class="card-body">
-            </div>
-            <div class="card-footer">
             </div>
         </div>
     </div>
 </div>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+
+
 </body>
 </html>
