created request editing and deleting

--- a/src/main/webapp/WEB-INF/templates/request.html
+++ b/src/main/webapp/WEB-INF/templates/request.html
@@ -8,20 +8,18 @@
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
           integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="../resources/css/style.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/resources/css/style.css}">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 </head>
 <body>
-
-
 <div class="container">
     <div class="d-flex justify-content-center h-100">
         <div class="card">
             <article class="card card-body mx-auto" style="max-width: 400px;">
                 <div class="card-header">
-                    <h3 class="text-center">Create Request</h3>
+                    <h3 class="text-center" th:text="${headerName}"></h3>
                 </div>
-                <form th:object="${request}" th:action="@{/request/new}" method="post">
+                <form th:object="${request}" th:action="@{/request/save}" method="post">
 
                     <p class="white">Select capacity:</p>
                     <div class="form-group input-group">
@@ -29,10 +27,10 @@
                             <span class="input-group-text"> <i class="fa fa-user"></i> </span>
                         </div>
                         <select th:field="*{capacity}" class="form-control" id="selCapacity">
-                            <option th:value="SINGLE" th:text="Single"></option>
-                            <option th:value="DOUBLE" th:text="Double"></option>
-                            <option th:value="TRIPLE" th:text="Triple"></option>
-                            <option th:value="QUAD" th:text="Quad"></option>
+                            <option th:each="classIdValue : ${T(com.epam.hotel.model.enums.Capacity).values()}"
+                                    th:value="${classIdValue.name()}"
+                                    th:text="${classIdValue.name()}">
+                            </option>
                         </select>
                     </div>
 
@@ -41,11 +39,12 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-user"></i> </span>
                         </div>
+
                         <select th:field="*{classID}" class="form-control" id="selClass">
-                            <option th:value="ECONOMY" th:text="Economy"></option>
-                            <option th:value="STANDARD" th:text="Standard"></option>
-                            <option th:value="FAMILY" th:text="Family"></option>
-                            <option th:value="LUX" th:text="Lux"></option>
+                            <option th:each="classIdValue : ${T(com.epam.hotel.model.enums.ClassID).values()}"
+                                    th:value="${classIdValue.name()}"
+                                    th:text="${classIdValue.name()}">
+                            </option>
                         </select>
                     </div>
 
@@ -72,9 +71,8 @@
                     <input hidden class="form-control" type="text" th:field="*{paymentStatus}"/>
 
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary btn-block"> Create request</button>
+                        <button type="submit" class="btn btn-primary btn-block" th:text="${buttonName}"></button>
                     </div>
-
                 </form>
             </article>
         </div>
@@ -85,6 +83,6 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script src="../resources/js/hotel.js"></script>
-< /body>
-< /html>
+<script th:src="@{/resources/js/hotel.js}"></script>
+</body>
+</html>
