--- a/src/main/webapp/WEB-INF/templates/login.html
+++ b/src/main/webapp/WEB-INF/templates/login.html
@@ -14,13 +14,13 @@
 <div class="container">
     <div class="d-flex justify-content-center h-100">
         <div class="card">
-            <div class="card-header">
-                <h3 class="text-center">Sign In</h3>
+            <div>
+                <h3 id= "login-header" class="text-center">Sign In</h3>
             </div>
             <div class="card-body">
                 <form th:action="@{/login}" method="post">
                     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
-                    <div class="input-group form-group">
+                    <div class="input-group form-group center-block">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
@@ -36,13 +36,13 @@
                         <input type="checkbox">Remember Me
                     </div>-->
                     <div class="form-group">
-                        <input type="submit" value="Login" class="btn float-right login_btn">
+                        <input type="submit" value="Login" class="btn login_btn">
                     </div>
                 </form>
             </div>
             <div class="card-footer">
                 <div class="d-flex justify-content-center links">
-                    Don't have an account?<a href="/register">Sign Up</a>
+                    Don't have an account?<a id="signup" href="/register">Sign Up</a>
                 </div>
             </div>
         </div>
