--- a/src/main/webapp/WEB-INF/templates/register.html
+++ b/src/main/webapp/WEB-INF/templates/register.html
@@ -16,7 +16,7 @@
 <div class="container">
     <div class="d-flex justify-content-center h-100">
         <div class="card">
-            <article class="card card-body mx-auto" style="max-width: 400px;">
+            <article class="card-body mx-auto" style="max-width: 400px;">
                 <div class="card-header">
                     <h3 class="text-center">Create Account</h3>
                 </div>
