registration validation without error messages

--- a/src/main/webapp/WEB-INF/templates/request.html
+++ b/src/main/webapp/WEB-INF/templates/request.html
@@ -19,8 +19,7 @@
                 <div class="card-header">
                     <h3 class="text-center" th:text="${headerName}"></h3>
                 </div>
-                <form th:object="${request}" th:action="@{/request/save}" method="post">
-
+                <form onsubmit="return calendarValidate()" th:object="${request}" th:action="@{/request/save}" method="post">
                     <p class="white">Select capacity:</p>
                     <div class="form-group input-group">
                         <div class="input-group-prepend">
@@ -53,7 +52,8 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-user"></i> </span>
                         </div>
-                        <input name="checkin" class="form-control datepicker" placeholder="Check in" type="text"
+                        <input id ="checkIn" autocomplete="off" name="checkin" class="form-control datepicker" placeholder="Check in"
+                               type="text"
                                th:field="*{checkIn}">
                     </div>
 
@@ -62,7 +62,8 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"> <i class="fa fa-user"></i> </span>
                         </div>
-                        <input name="checkout" class="form-control datepicker" placeholder="Check out" type="text"
+                        <input id ="checkOut" autocomplete="off" name="checkout" class="form-control datepicker"
+                               placeholder="Check out" type="text"
                                th:field="*{checkOut}">
                     </div>
 
