--- a/src/main/webapp/WEB-INF/templates/login.html
+++ b/src/main/webapp/WEB-INF/templates/login.html
@@ -15,7 +15,7 @@
     <div class="d-flex justify-content-center h-100">
         <div class="card">
             <div>
-                <h3 id= "login-header" class="text-center">Sign In</h3>
+                <h3 id="login-header" class="text-center">Sign In</h3>
             </div>
             <div class="card-body">
                 <form th:action="@{/login}" method="post">
@@ -24,14 +24,15 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-user"></i></span>
                         </div>
-                        <input name="username" type="text" class="form-control" placeholder="username">
+                        <input id ="un-login-input" name="username" type="text" class="form-control" placeholder="username">
                     </div>
                     <div class="input-group form-group">
                         <div class="input-group-prepend">
                             <span class="input-group-text"><i class="fas fa-key"></i></span>
                         </div>
-                        <input name="password" type="password" class="form-control" placeholder="password">
+                        <input id ="pw-login-input" name="password" type="password" class="form-control" placeholder="password">
                     </div>
+                    <p hidden id="lgn-error" class="error text-center">Invalid login or password.</p>
                     <!--<div class="row align-items-center remember">
                         <input type="checkbox">Remember Me
                     </div>-->
@@ -50,5 +51,9 @@
 </div>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script th:src="@{/resources/js/hotel.js}"></script>
+<script> $(document).ready(function () {
+    validateLoginPage();
+});</script>
 </body>
 </html>
