--- a/src/main/webapp/WEB-INF/templates/request.html
+++ b/src/main/webapp/WEB-INF/templates/request.html
@@ -56,6 +56,7 @@
                         <input id ="checkIn" autocomplete="off" name="checkin" class="form-control datepicker" placeholder="Check in" type="text"
                                th:field="*{checkIn}">
                     </div>
+                    <p hidden id="checkIn-error" class="error text-center">Check in date should be at least tomorrow.</p>
 
                     <p class="white">Select check out date:</p>
                     <div id="checkout" class="form-group input-group">
@@ -65,6 +66,7 @@
                         <input id ="checkOut" autocomplete="off" name="checkout" class="form-control datepicker" placeholder="Check out" type="text"
                                th:field="*{checkOut}">
                     </div>
+                    <p hidden id="checkOut-error" class="error text-center">Check out date should be after check in date.</p>
 
                     <input hidden class="form-control" type="text" th:field="*{requestID}"/>
                     <input hidden class="form-control" type="text" th:field="*{userID}"/>
