added page for errors

--- a/src/main/webapp/WEB-INF/templates/login.html
+++ b/src/main/webapp/WEB-INF/templates/login.html
@@ -35,7 +35,7 @@
                                th:placeholder="#{message.login-page.placeholder.password}">
                     </div>
                     <p hidden th:text="#{message.login-page.error}" id="lgn-error" class="error text-center">error</p>
-                    <div class="form-group">
+                    <div class="center-align form-group">
                         <input type="submit" th:value="#{message.login-page.button}" class="btn login_btn">
                     </div>
                 </form>
